--- a/ch-02-coffeshop/package.json
+++ b/ch-02-coffeshop/package.json
@@ -12,7 +12,9 @@
     "@hookform/resolvers": "^2.9.8",
     "date-fns": "^2.29.3",
     "immer": "^9.0.15",
+    "path": "^0.12.7",
     "phosphor-react": "^1.4.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
